# rust-cookbook

./: Cargo.toml  README.md
data/: file-1252.txt  file-crlf.txt  file-no-end-nl.txt  file-utf8.txt  file.csv  file.txt
src/: callbacks.rs  datetime.rs  fmt.rs  io.rs  lang.rs  lib.rs  macros.rs  serde.rs  sort.rs  threads.rs
