[package]
name = "rust-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.33"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
csv = "1.3.0"
chrono = "0.4.31"
chrono-tz = "0.8.3"
